apps/linkding/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: app
          image: ghcr.io/sissbruecker/linkding@sha256:e35cb50e0581178f245125ffaa909c565416c94c9f22ace305a7d234a4345522
          volumeMounts:
            - name: data
              mountPath: /etc/linkding/data
          resources:
            requests:
              memory: 128M
            limits:
              memory: 256M
          ports:
            - name: http
              containerPort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [linkding]
